--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preload stylesheet" href="style.css" as="style">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="font" crossorigin="anonymous">
+    <link rel="preconnect" href="https://pokeapi.co/" crossorigin="anonymous">
     <script defer src="./script.js"></script>
     <title>Pok&eacute;dex</title>
 </head>
