Added click function to save pokemon card data, and take user to separate poke data page

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preload stylesheet" href="style.css" as="style">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="font" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
     <link rel="preconnect" href="https://pokeapi.co/" crossorigin="anonymous">
     <script defer src="./script.js"></script>
     <title>Pok&eacute;dex</title>
 </head>
-<body>
+<body id="home">
     <h1 class="main-title">Pok&eacute;dex API</h1>
     <main class="main"></main>
 </body>
