Adding stat bars to pokemon card page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer src="./script.js"></script>
     <title>Pok&eacute;dex</title>
 </head>
-<body id="home">
+<body id="home" class="home">
     <h1 class="main-title">Pok&eacute;dex API</h1>
     <main class="main"></main>
 </body>
