--- a/pokeCard.html
+++ b/pokeCard.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="preload stylesheet" href="./style.css" as="style">
         <script defer src="./script.js"></script>
         <title>Pokemon</title>
     </head>
-    <body id="poke-card-data">
+    <body id="poke-card-data" class="poke">
         <h1>Pokemon Card</h1>
         <main class="poke-main"></main>
     </body>
