Updated README with imgs

--- a/poke-card.html
+++ b/poke-card.html
@@ -7,7 +7,7 @@
         <link rel="preload stylesheet" href="./style.css" as="style">
         <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
         <script defer src="./script.js"></script>
-        <title>Pokemon</title>
+        <title>Pok&eacute;dex</title>
     </head>
     <body id="poke-card-data" class="poke">
         <main class="poke-main"></main>
