Added search field for Pokemon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <title>Pok&eacute;dex</title>
 </head>
 <body id="home" class="home">
-    <h1 class="main-title">Pok&eacute;dex API</h1>
+    <h1 class="home-title">Pok&eacute;dex API</h1>
+    <form name="search" class="home-form">
+        <input name="input" type="text" class="home-form-search">
+    </form>
     <main class="main"></main>
 </body>
 </html>
