Finished styling search input

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="home" class="home">
     <h1 class="home-title">Pok&eacute;dex API</h1>
     <form name="search" class="home-form">
-        <input name="input" type="text" class="home-form-search">
+        <input name="input" type="text" class="home-form-search" placeholder="Enter Pokemon">
     </form>
     <main class="main"></main>
 </body>
