Added a loading animation for API request

--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
         <input name="input" type="text" class="home-form-search" placeholder="Enter Pok&eacute;mon">
     </form>
     <main class="main"></main>
+    <div class="loading">
+        <span class="loading-ball"></span>
+        <span class="loading-ball"></span>
+        <span class="loading-ball"></span>
+    </div>
 </body>
 </html>
