Updated to separate script files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preload stylesheet" href="style.css" as="style">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
     <link rel="preconnect" href="https://pokeapi.co/" crossorigin="anonymous">
-    <script defer src="./script.js"></script>
+    <script defer src="./scripts/script.js"></script>
     <title>Pok&eacute;dex</title>
 </head>
 <body id="home" class="home">
