--- a/poke-card.html
+++ b/poke-card.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="preload stylesheet" href="./style.css" as="style">
         <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
-        <script defer src="./script.js"></script>
+        <script defer src="./scripts/pokemon-details.js"></script>
         <title>Pok&eacute;dex</title>
     </head>
     <body id="poke-card-data" class="poke">
