Setting up pagination controls

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <form name="search" class="home-form">
         <input name="input" type="text" class="home-form-search" placeholder="Enter Pok&eacute;mon">
     </form>
+    <section class="pagination-controls">
+        <button class="pagination-controls__btn">Prev</button>
+        <button class="pagination-controls__btn">Next</button>
+    </section>
     <main class="main"></main>
     <div class="loading">
         <span class="loading-ball"></span>
