Pagination working, but pokemon card imgs broken due to ids

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <input name="input" type="text" class="home-form-search" placeholder="Enter Pok&eacute;mon">
     </form>
     <section class="pagination-controls">
-        <button class="pagination-controls__btn">Prev</button>
-        <button class="pagination-controls__btn">Next</button>
+        <button id="pagination-controls__btn--prev" class="pagination-controls__btn">Prev</button>
+        <button id="pagination-controls__btn--next" class="pagination-controls__btn">Next</button>
     </section>
     <main class="main"></main>
     <div class="loading">
