Added svg chevron icons for left and right on prev & next btns

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
         <input name="input" type="text" class="home-form-search" placeholder="Enter Pok&eacute;mon">
     </form>
     <section class="pagination-controls">
-        <button id="pagination-controls__btn--prev" class="pagination-controls__btn">Prev</button>
-        <button id="pagination-controls__btn--next" class="pagination-controls__btn">Next</button>
+        <button id="pagination-controls__btn--prev" class="pagination-controls__btn">
+            <svg class="chevron chevron--left" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
+            <span>Prev</span>
+        </button>
+        <button id="pagination-controls__btn--next" class="pagination-controls__btn">
+            <span>Next</span>
+            <svg class="chevron chevron--right" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
+        </button>
     </section>
     <main class="main"></main>
     <div class="loading">
