--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preload stylesheet" href="style.css" as="style">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://pokeapi.co/">
+    <link rel="dns-prefetch" href="https://pokeres.bastionbot.org">
     <link rel="preconnect" href="https://pokeapi.co/" crossorigin="anonymous">
+    <link rel="preconnect" href="https://pokeres.bastionbot.org">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
     <script defer src="./scripts/script.js"></script>
     <title>Pok&eacute;dex</title>
 </head>
