Moved loader component into separate module file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://pokeapi.co/" crossorigin="anonymous">
     <link rel="preconnect" href="https://pokeres.bastionbot.org">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
-    <script defer src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/Loader.js"></script>
+    <script type="module" src="./scripts/script.js"></script>
     <title>Pok&eacute;dex</title>
 </head>
 <body id="home" class="home">
