Created separate files for EasterEgg and SearchFilter

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <link rel="preconnect" href="https://pokeapi.co/" crossorigin="anonymous">
     <link rel="preconnect" href="https://pokeres.bastionbot.org">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
+    <script type="module" src="./scripts/main.js"></script>
     <script type="module" src="./scripts/Loader.js"></script>
-    <script type="module" src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/SearchFilter.js"></script>
+    <script type="module" src="./scripts/EasterEgg.js"></script>
     <title>Pok&eacute;dex</title>
 </head>
 <body id="home" class="home">
