Generalized removePokemonCards into removeChildrenElems and refactored into separate module file, then imported into main.js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="module" src="./scripts/main.js"></script>
     <script type="module" src="./scripts/Loader.js"></script>
     <script type="module" src="./scripts/SearchFilter.js"></script>
+    <script type="module" src="./scripts/utils.js"></script>
     <script type="module" src="./scripts/EasterEgg.js"></script>
     <title>Pok&eacute;dex</title>
 </head>
