Moved comment lower, adjusted title, and added forced-cache header to fetch API request (data will not be frequently changing)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="module" src="./scripts/SearchFilter.js"></script>
     <script type="module" src="./scripts/utils.js"></script>
     <script type="module" src="./scripts/EasterEgg.js"></script>
-    <title>Pok&eacute;dex</title>
+    <title>Pok&eacute;dex App</title>
 </head>
 <body id="home" class="home">
     <h1 class="home-title">Pok&eacute;dex API</h1>
