--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://pokeres.bastionbot.org">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
     <script type="module" src="./scripts/main.js"></script>
+    <script type="module" src="./scripts/Pagination.js"></script>
+    <script type="module" src="./scripts/PokemonCardsGrid.js"></script>
+    <script type="module" src="./scripts/PokemonPopup.js"></script>
     <script type="module" src="./scripts/Loader.js"></script>
     <script type="module" src="./scripts/SearchFilter.js"></script>
     <script type="module" src="./scripts/utils.js"></script>
