Remove unneeded comma

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Alex Curran's Pokedex contains all major Pokemon characters, and allows for instant searching, as well as detailed information on specific Pokemon.">
+    <meta name="description" content="Alex Curran's Pokedex contains all major Pokemon characters, and allows for instant searching as well as detailed information on specific Pokemon.">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preload stylesheet" href="style.css" as="style">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
