--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://pokeapi.co/" crossorigin="anonymous">
     <link rel="preconnect" href="https://pokeres.bastionbot.org">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
-    <script type="module" src="./scripts/main.js"></script>
+    <script type="module" src="./scripts/Main.js"></script>
     <script type="module" src="./scripts/Pagination.js"></script>
     <script type="module" src="./scripts/PokemonCardsGrid.js"></script>
     <script type="module" src="./scripts/PokemonPopup.js"></script>
