--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <input name="input" type="text" class="home-form-search" placeholder="Enter Pok&eacute;mon">
     </form>
     <section class="pagination-controls">
-        <button id="pagination-controls__btn--prev" class="pagination-controls__btn">
+        <button id="pagination-controls__btn--prev" class="pagination-controls__btn btn--hide">
             <svg class="chevron" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
             <span>Prev</span>
         </button>
