--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Alex Curran's Pokedex contains all major Pokemon characters and allows for instant searching. In addition, this Pokedex provides detailed information on specific Pokemon.">
-    <link rel="preload stylesheet" href="style.css" as="style">
+    <link rel="stylesheet" href="style.css">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://pokeapi.co/">
     <link rel="preconnect" href="https://pokeapi.co/" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="preload stylesheet" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap">
     <script type="module" src="./scripts/Main.js"></script>
     <script type="module" src="./scripts/Pagination.js"></script>
     <script type="module" src="./scripts/PokemonCardsGrid.js"></script>
