--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Alex Curran's Pokedex contains all major Pokemon characters and allows for instant searching. In addition, this Pokedex provides detailed information on specific Pokemon.">
     <link rel="stylesheet" href="style.css">
-    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://pokeapi.co/">
     <link rel="preconnect" href="https://pokeapi.co/" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
     <script type="module" src="./scripts/Main.js"></script>
     <script type="module" src="./scripts/Pagination.js"></script>
     <script type="module" src="./scripts/PokemonCardsGrid.js"></script>
