Add error paragraph elem to display error text when a Pokemon character is not found

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <form name="search" class="home-form">
         <input name="input" type="text" class="home-form-search" placeholder="Search for a Pok&eacute;mon by name">
     </form>
+    <p class="home-error"></p>
     <section class="pagination-controls">
         <button id="pagination-controls__btn--prev" class="pagination-controls__btn btn--hide">
             <svg class="chevron" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
