Shorten search input placeholder text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body id="home" class="home">
     <h1 class="home-title">Pok&eacute;dex API</h1>
     <form name="search" class="home-form">
-        <input name="input" type="text" class="home-form-search" placeholder="Search for a Pok&eacute;mon by name">
+        <input name="input" type="text" class="home-form-search" placeholder="Search for a Pok&eacute;mon">
     </form>
     <p class="home-error"></p>
     <section class="pagination-controls">
