Add subtle scroll-driven fade effect with ScrollTimeline of Web Animations API

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script type="module" src="./scripts/SearchFilter.js"></script>
     <script type="module" src="./scripts/utils.js"></script>
     <script type="module" src="./scripts/EasterEgg.js"></script>
+    <script type="module" src="./scripts/ScrollTimeline.js"></script>
     <title>Pok&eacute;dex App</title>
 </head>
 <body id="home" class="home">
