--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script type="module" src="./scripts/SearchFilter.js"></script>
         <script type="module" src="./scripts/EasterEgg.js"></script>
         <title>Pok&eacute;dex App</title>
+        <link rel="icon" href="./images/favicon/pokeball.min.png" />
     </head>
     <body id="home" class="home">
         <h1 class="home-title">Pok&eacute;dex API</h1>
