Replace HTML string insertion with `element.insertAdjacentHTML()` with template cloning for pokemon cards in grid layout

--- a/index.html
+++ b/index.html
@@ -83,33 +83,33 @@
                 </svg>
             </button>
         </section>
-        <main class="main">
-            <template id="pokemon-card-template">
-                <button class="main-card-btn-container" data-url="">
-                    <article class="main-card">
-                        <figure class="main-card-fig">
-                            <img
-                                class="main-card-fig-img"
-                                src=""
-                                alt="Pokemon character"
-                                width="96"
-                                height="96"
-                                loading="eager"
-                                decoding="async"
-                            />
-                        </figure>
-                        <section class="main-card-content">
-                            <p class="main-card-content-num"></p>
-                            <h2 class="main-card-content-name"></h2>
-                        </section>
-                    </article>
-                </button>
-            </template>
-        </main>
+        <main class="main"></main>
         <div class="loading">
             <span class="loading-ball"></span>
             <span class="loading-ball"></span>
             <span class="loading-ball"></span>
         </div>
+        <!-- templates -->
+        <template id="pokemon-card-template">
+            <button class="main-card-btn-container" data-url="">
+                <article class="main-card">
+                    <figure class="main-card-fig">
+                        <img
+                            class="main-card-fig-img"
+                            src=""
+                            alt="Pokemon character"
+                            width="96"
+                            height="96"
+                            loading="eager"
+                            decoding="async"
+                        />
+                    </figure>
+                    <section class="main-card-content">
+                        <p class="main-card-content-num"></p>
+                        <h2 class="main-card-content-name"></h2>
+                    </section>
+                </article>
+            </button>
+        </template>
     </body>
 </html>
