Add popover container elem in HTML

--- a/index.html
+++ b/index.html
@@ -111,5 +111,9 @@
                 </article>
             </button>
         </template>
+        <!-- pokemon character popover -->
+        <div class="pokemon-popup" popover="auto">
+            <div class="popup-content"></div>
+        </div>
     </body>
 </html>
