Swap JS popup implementation for native Popover API with dynamic JS injection

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             </button>
         </template>
         <!-- pokemon character popover -->
-        <div class="pokemon-popup" popover="auto">
-            <div class="popup-content"></div>
+        <div id="pokemon-popup" popover="auto">
+            <div id="popup-content"></div>
         </div>
     </body>
 </html>
